@@ -37,5 +37,6 @@ struct HideOptions
 void StartFixBeingDebugged(DWORD targetPid, bool setToNull);
 void startInjectionProcess(HANDLE hProcess, BYTE * dllMemory, bool newProcess);
 void startInjection(DWORD targetPid, const WCHAR * dllPath, bool newProcess);
+void injectDll(DWORD targetPid, const WCHAR * dllPath);
 BYTE * ReadFileToMemory(const WCHAR * targetFilePath);
 void FillExchangeStruct(HANDLE hProcess, HOOK_DLL_EXCHANGE * data);
